WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201840
AX: USER: VO: Messages > Message > Shift-VO-M doesn't reveal correct actions
https://bugs.webkit.org/show_bug.cgi?id=201840
Summary
AX: USER: VO: Messages > Message > Shift-VO-M doesn't reveal correct actions
Eric Liang
Reported
2019-09-16 13:28:05 PDT
Seed user reports that in Messages, when VO cursor is focused on a message, Shift-VO-M doesn’t reveal the Tapback command (or other commands) user is presented with when they Control Click on a Message.
https://sitewatch.apple.com/watches/acker-public-seed/issues/342853
Steps To Reproduce: 1. Enable VoiceOver 2. Messages > focus VO cursor on a Message > Shift-VO-M > control click on message > control click outside of message Results: Shift-VO-M: only delivers ‘Clear Chat Transcript’ command. User expected Tapback command. Regression: Reproduced in 16C27 Notes: What’s interesting is that the ‘Clear Chat Transcript’ command appears when Control-Click outside of message. This seems to indicate some weirdness with the focus, however, interacting with text of message doesn’t address the behavior.
Attachments
Patch
(2.52 KB, patch)
2019-09-16 13:33 PDT
,
Eric Liang
no flags
Details
Formatted Diff
Diff
Patch
(2.81 KB, patch)
2019-09-16 14:30 PDT
,
Eric Liang
no flags
Details
Formatted Diff
Diff
Patch
(2.83 KB, patch)
2019-09-16 14:32 PDT
,
Eric Liang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Liang
Comment 1
2019-09-16 13:28:32 PDT
rdar://problem/28872781
Eric Liang
Comment 2
2019-09-16 13:33:23 PDT
Created
attachment 378892
[details]
Patch
chris fleizach
Comment 3
2019-09-16 14:22:01 PDT
Comment on
attachment 378892
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=378892&action=review
> Source/WebCore/ChangeLog:8 > + menuForEvent: expects event-position in windowâs space, but we pass the position in Coreâs space. In this case, we need to convert coreâs space to windowâs space.
can you use ascii characters here instead of unicode
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3767 > + ScrollView *scrollView = downcast<AccessibilityScrollView>(*parent).scrollView();
can you change this to auto scrollView while we're here. should probably also do // just to ensure we have a scrollView if (auto scrollView = ...) { }
Eric Liang
Comment 4
2019-09-16 14:30:35 PDT
Created
attachment 378894
[details]
Patch
Eric Liang
Comment 5
2019-09-16 14:32:04 PDT
Created
attachment 378895
[details]
Patch
WebKit Commit Bot
Comment 6
2019-09-16 16:58:31 PDT
Comment on
attachment 378895
[details]
Patch Clearing flags on attachment: 378895 Committed
r249930
: <
https://trac.webkit.org/changeset/249930
>
WebKit Commit Bot
Comment 7
2019-09-16 16:58:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug